--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.2.0",
-        "laravel/framework": ">=5.8.9"
+        "php": ">=7.4.0",
+        "laravel/framework": ">=6.0"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +18,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "KiryaDev\\Admin\\ServiceProvider"
+                "KiryaDev\\Admin\\AdminServiceProvider"
             ]
         }
     },
