--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4.0",
-        "laravel/framework": ">=6.0"
+        "laravel/framework": ">=8.0",
+        "laravel/ui": ">=3.0"
     },
     "autoload": {
         "psr-4": {
